--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu]
+;[env:nodemcu]
+[env:esp01_1m]
 platform = espressif8266
-board = nodemcu
+board = esp01_1m
+;board = nodemcu
 framework = arduino
