--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,14 @@ platform = espressif8266
 board = esp01_1m
 ;board = nodemcu
 framework = arduino
+
+lib_extra_dirs = ..\SharedLib
+;build_dir = c:\Temp
+
+;build_flags = !python git_rev_macro.py
+
+build_flags =
+    -D SSID=WiFi2
+    -D PWD=lobbenwifi
+
+extra_scripts = pre:git_version.py
