Build stuff. version

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ lib_extra_dirs = ..\SharedLib
 ;build_flags = !python git_rev_macro.py
 
 build_flags =
-    -D SSID=WiFi2
-    -D PWD=lobbenwifi
+    -D SSID=SSIS
+    -D PWD=PWD
 
 extra_scripts = pre:git_version.py
