--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ lib_extra_dirs = ..\SharedLib
 ;build_dir = c:\Temp
 
 lib_deps =
-  EasyOTA
+  5731 ;EasyOTA
 
 ;build_flags = !python git_rev_macro.py
 upload_flags = 
@@ -31,14 +31,14 @@ upload_port = 192.168.10.181    ;#uncomment after initial flash
 
 
 build_flags =
-    -D SSID="SSID"
-    -D PWD="PWD"
+    -D SSID=SSID
+    -D PWD=PWD
     -D ESP_NAME=\"${ota.esp_name}\" 
     -D ESP_PW=\"${ota.esp_pw}\"
 
 extra_scripts = pre:git_version.py
 
-;upload_protocol = espot
+upload_protocol = espot
 
 [ota]
 esp_name = "NIBE"
