--- a/platformio.ini
+++ b/platformio.ini
@@ -26,7 +26,7 @@ upload_flags =
   --auth=${ota.esp_pw}    ;#uncomment after initial flash
 
 ;upload_port = ${ota.esp_name}.local    ;#uncomment after initial flash
-upload_port = 192.168.10.181    ;#uncomment after initial flash
+upload_port = 192.168.10.20    ;#uncomment after initial flash
 
 
 
@@ -38,8 +38,8 @@ build_flags =
 
 extra_scripts = pre:git_version.py
 
-upload_protocol = espot
+upload_protocol = espota
 
 [ota]
-esp_name = "NIBE"
+esp_name = "Nibe"
 esp_pw = "PWD"
